fixed up legend alignment

--- a/app/src/components/map.css
+++ b/app/src/components/map.css
@@ -12,7 +12,7 @@
 
 #info_button {
     position: relative;
-    top: 8px;
+    top: -72px;
     left: 10px;
     width:29px;
     height:29px;
@@ -130,7 +130,9 @@
     background: white;
     border-radius: 10px;
     box-shadow: 0 0 50px -25px black;
-} */
+    height: auto;
+    }
+ */
 
 .flex-center {
     position: absolute;
@@ -145,7 +147,7 @@
 
 .sidebar-content {
     position: absolute;
-    top: 75px;
+    top: 0px;
     border-radius: 10px;
     box-shadow: 0 0 50px -25px black;
     width: 95%;
@@ -158,17 +160,19 @@
 }
 
 .sidebar-toggle {
-    position: absolute;
+    position: relative; 
+    top: -80px;
     width: 1.3em;
     height: 1.3em;
-    overflow: visible;
+    /* overflow: visible; */
     display: flex;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center; */
+    /* align-items: center; */
 }
 
 .sidebar-toggle.left {
     right: -1.5em;
+    height: 1.3em;
 }
 
 .sidebar-toggle:hover {
@@ -184,6 +188,8 @@
 }
 
 .left {
+    position: absolute;
+    top: 75px;
     height: 580px;
 }
 
